# quadratic_equation

./: CMakeLists.txt  LICENSE  README.md
src/quadratic_equation/: CMakeLists.txt  quadratic_equation.c  quadratic_equation.h
src/utils/: CMakeLists.txt  utils.c  utils.h
test/: CMakeLists.txt  test.c  test_cases.txt
test/utils/: CMakeLists.txt  test_handler.c  test_handler.h
